--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "3.2.4",
   "description": "Polyfill object-fit and object-position on images on IE9, IE10, IE11, Edge, Safari, ...",
   "license": "MIT",
-  "repository": "bfred-it/object-fit-images",
-  "author": "Federico Brigante <bfred-it@users.noreply.github.com> (twitter.com/bfred_it)",
+  "repository": "fregante/object-fit-images",
+  "author": "Federico Brigante <opensource@bfred.it> (bfred.it)",
   "bugs": {
-    "url": "https://github.com/bfred-it/object-fit-images/issues"
+    "url": "https://github.com/fregante/object-fit-images/issues"
   },
-  "homepage": "https://github.com/bfred-it/object-fit-images#readme",
+  "homepage": "https://github.com/fregante/object-fit-images#readme",
   "keywords": [
     "polyfill",
     "object-fit",
